UCDetector 1.2.0 from 2009-:
Bugfixes:
 - [ 2783734 ] Static imports are not recognized
 - [ 2787576 ] Waiting for first 10 markers

New features:
 - Improved running UCDetector with ANT: Options, refresh/compile workspace 
 - [ 2658675 ] Want annotations, not comments, to indicate non-dead code

// -----------------------------------------------------------------------------
UCDetector 1.1.0 from 2009-04-15:
Bugfixes:
 - [ 2743872 ] Don't check for constructors called only 1 time
 - [ 2743908 ] Methods only called from inner class could be private
 - [ 2762967 ] XmlReport: Problems running UCDetector

// -----------------------------------------------------------------------------
UCDetector 1.0.0 from 2009-04-03:
New features:
 - [ 2409697 ] Detect code only called from tests
 - [ 2373808 ] Classes found by text search should have no markers
 - [ 2490344 ] Filters options for visibility (fields, constants, methods)
 - [ 2653112 ] UCDetector should run as a ant task in headless mode
 - [ 2417657 ] QuickFix should behave as for Java problems (propose all occurrences)

Bugfixes:
 - [ 2373808 ] Classes found by text search should have no markers
 - [ 2600845 ] UCDetector html report broken
 - [ 2715348 ] Filter on Source folders does not work
 - [ 2539795 ] Added marker warning for: Wrong default visibility marker for classes
 - [ 2721955 ] On QuickFix the direct sibling marker gets deleted too

// -----------------------------------------------------------------------------
UCDetector 0.12.0 from 2008-11-25:
New features:
 - [ 2163715 ] eclipse update site: http://ucdetector.sourceforge.net/update
 - [ 2290711 ] Detect write only fields
 - [ 2180705 ] Look for just the class name without the package name
 - Better messages for markers

Bugfixes:
 - [ 2153699 ] Find unused interface methods, unused abstract methods
 - [ 2269486 ] Constants in Interfaces Can't be private
 - [ 2225016 ] Don't create "0 references marker" for overridden methods
